# muzzle

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.cu128  Dockerfile.cu130  Makefile  README.md  pyproject.toml
.github/workflows/: docker-publish.yml
docker/: requirements-real.txt  requirements-torch-cuda.txt
examples/: stream_stt_pipewire.py  stream_tts_cpu.py  stream_tts_pipewire.py
src/muzzle/: __init__.py  __main__.py  app.py  audio.py  config.py  domain.py  schemas.py  session.py  voice_registry.py
src/muzzle/adapters/: __init__.py  base.py  chatterbox.py  factory.py  fake.py  whisper.py
tests/: test_api.py
