[project]
name = "muzzle"
version = "0.1.0"
description = "Local streaming STT and TTS API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anyio>=4.0.0",
    "fastapi>=0.115.0",
    "numpy>=1.24.0",
    "pydantic>=2.7.0",
    "python-multipart>=0.0.9",
    "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
real = [
    "chatterbox-tts @ git+https://github.com/chrishayen/chatterbox.git@ce5a900dbdbc776eeb3d00c1c1607143c7604a5b",
    "faster-whisper>=1.1.0",
    "silero-vad>=6.0.0",
]
test = [
    "httpx>=0.27.0",
    "pytest>=8.0.0",
]

[project.scripts]
muzzle = "muzzle.__main__:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
